feat(test): add object domain implementation type

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ AddTestDir(assertion_crawler)
 AddTestDir(domains)
 AddTestDir(domains/wrapint)
 AddTestDir(domains/region)
+AddTestDir(domains/object)
 AddTestDir(transforms)
 AddTestDir(inter)
 AddTestDir(cg)
