refactor: split headers to reduce bloating

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -7,10 +7,17 @@ add_library(Crab ${CRAB_LIBS_TYPE}
   abstract_domain_params.cpp
   array_adaptive_impl.cpp
   boolean.cpp
+  congruence.cpp
+  constant.cpp
+  dis_interval.cpp
+  interval.cpp
+  interval_congruence.cpp
   region_info.cpp
+  sign.cpp
   small_range.cpp
   term_operators.cpp
   types.cpp
+  wrapped_interval.cpp
   ##numbers 
   bignums.cpp
   safeint.cpp
