--- a/external/elina/Makefile
+++ b/external/elina/Makefile
@@ -1,16 +1,15 @@
 #------------------------------------------------------------------------------------#
 #                                  INSTRUCTIONS
 #------------------------------------------------------------------------------------#
-#  1. Type `make crab_install`
+#  0. Define variables BOOST_ROOT, GMP_DIR in Makefile.config and MPFR_DIR
+#  1. Type `make crab_elina_install`
 #  2. Type `make all`
 #  3. Type `./domain` or `./analysis`
 #------------------------------------------------------------------------------------#
 
-PWD=$(shell pwd)
-CRAB_INSTALL=${PWD}/crab-install
+include ../Makefile.config
 
-UNAME := $(shell uname)
-CRAB_LIBS = $(CRAB_INSTALL)/crab/lib/libCrab.a
+MPFR_DIR=
 
 # Elina shared libraries have extension .so even on mac
 ELINA_LIBS := \
@@ -22,35 +21,18 @@ ELINA_LIBS := \
     $(CRAB_INSTALL)/elina/lib/libpartitions.so \
     $(CRAB_INSTALL)/elina/lib/libzonotope.so
 
+CXXFLAGS += \
+     -I $(MPFR_DIR)/include \
+     -I $(CRAB_INSTALL)/elina/include 
+
+LDFLAGS += $(ELINA_LIBS)
+LDFLAGS += -L$(MPFR_DIR)/lib -lmpfr
+
 # Lookup paths for crab and elina shared libraries
-LDFLAGS := -Wl,-rpath,$(CRAB_INSTALL)/crab/lib/,-rpath,$(CRAB_INSTALL)/elina/lib/
+LDFLAGS += -Wl,-rpath,$(CRAB_INSTALL)/crab/lib/,-rpath,$(CRAB_INSTALL)/elina/lib/
 ifeq ($(UNAME),Linux)
     LDFLAGS += -Wl,--disable-new-dtags 
 endif
-
-LDLIBS := \
-    $(CRAB_LIBS) $(ELINA_LIBS) \
-    -lmpfr -lgmp -lm -lstdc++ 
-
-CXXFLAGS := \
-    -Wall -Werror -Wfatal-errors \
-    -Wno-unused-function \
-    -Wno-unused-local-typedefs -Wno-inconsistent-missing-override -Wno-unused-const-variable \
-    -Wno-uninitialized -Wno-deprecated \
-    -DBSD -DHAVE_IEEE_754 -DSIZEOF_VOID_P=8 -DSIZEOF_LONG=8 \
-    -I $(CRAB_INSTALL)/crab/include \
-    -I $(CRAB_INSTALL)/ldd/include/ldd \
-    -I $(CRAB_INSTALL)/elina/include \
-    -O2 -g -std=c++11
-
-ifeq ($(UNAME),Darwin)
-## For Mojave
-CXXFLAGS += -Wno-nullability-completeness
-CXXFLAGS += -isystem /usr/local/include 
-CXXFLAGS += -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk
-endif
-# For gmp library (you might need to adapt this)
-LDFLAGS := -L/usr/local/lib
 
 all: domain analysis
 # Ugly hack: add elina lib directory to rpath is not enough
@@ -59,15 +41,16 @@ all: domain analysis
 %.o:  $(CXX) $(CXXFLAGS) $< -c -o $@
 
 domain: domain.o
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) domain.o $(LDLIBS) -o domain
+	$(CXX) domain.o $(LDFLAGS) -o domain
 
 analysis: analysis.o
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) analysis.o $(LDLIBS) -o analysis
+	$(CXX) analysis.o $(LDFLAGS) -o analysis
 
 clean:
 	rm -f domain analysis  *.a *.o
 
-crab_install:
+.PHONY: crab_elina_install
+crab_elina_install:
 	git clone https://github.com/seahorn/crab.git crab -b dev
 	mkdir -p crab/build
 	cd crab/build \
