cmake: new pplite 0.11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,6 @@ option(CRAB_ENABLE_STATS "Enable stats" ON)
 if (CRAB_USE_APRON AND CRAB_USE_ELINA)
   message(FATAL_ERROR "Crab: Apron and Elina are not compatible. Choose one")
 endif()
-if (NOT CRAB_USE_APRON AND CRAB_USE_PPLITE)
-  message(FATAL_ERROR "Crab: PPLite library requires Apron")
-endif()
 
 ## Only for developers use
 option(CRAB_ENABLE_TESTS "Enable tests" OFF)
@@ -199,22 +196,7 @@ if (CRAB_USE_LDD)
   endif()
 endif ()
 
-if (CRAB_USE_APRON)
-  find_package(Apron)
-  if (APRON_FOUND)
-    include_directories (${APRON_INCLUDE_DIR})
-    set (APRON_LIBS ${APRON_LIBRARY})
-    set (HAVE_APRON TRUE)
-  else()
-    ExternalProject_Get_Property (apron INSTALL_DIR)
-    set (APRON_ROOT ${INSTALL_DIR} CACHE FILEPATH "Forced location of apron" FORCE)
-    message (WARNING "Crab: no apron found. Run \n\tcmake --build . --target apron && cmake ${CMAKE_SOURCE_DIR}")
-    # restore old CMAKE_FIND_LIBRARY_SUFFIXES
-    set(CMAKE_FIND_LIBRARY_SUFFIXES ${_CRAB_ORIG_CMAKE_FIND_LIBRARY_SUFFIXES})     
-    return()
-  endif()
-endif ()
-
+# PPLite (if enabled) should be built before Apron
 if (CRAB_USE_PPLITE)
   find_package(PPLite)
   if (PPLITE_FOUND)
@@ -227,6 +209,22 @@ if (CRAB_USE_PPLITE)
     message (WARNING "Crab: no pplite found. Run \n\tcmake --build . --target pplite && cmake ${CMAKE_SOURCE_DIR}")
     # restore old CMAKE_FIND_LIBRARY_SUFFIXES
     set(CMAKE_FIND_LIBRARY_SUFFIXES ${_CRAB_ORIG_CMAKE_FIND_LIBRARY_SUFFIXES})
+    return()
+  endif()
+endif ()
+
+if (CRAB_USE_APRON)
+  find_package(Apron)
+  if (APRON_FOUND)
+    include_directories (${APRON_INCLUDE_DIR})
+    set (APRON_LIBS ${APRON_LIBRARY})
+    set (HAVE_APRON TRUE)
+  else()
+    ExternalProject_Get_Property (apron INSTALL_DIR)
+    set (APRON_ROOT ${INSTALL_DIR} CACHE FILEPATH "Forced location of apron" FORCE)
+    message (WARNING "Crab: no apron found. Run \n\tcmake --build . --target apron && cmake ${CMAKE_SOURCE_DIR}")
+    # restore old CMAKE_FIND_LIBRARY_SUFFIXES
+    set(CMAKE_FIND_LIBRARY_SUFFIXES ${_CRAB_ORIG_CMAKE_FIND_LIBRARY_SUFFIXES})     
     return()
   endif()
 endif ()
@@ -255,28 +253,28 @@ if (CRAB_USE_LDD)
   set_target_properties(ldd PROPERTIES EXCLUDE_FROM_ALL ON)
   message (STATUS "Crab: Boxes domain will be available")  
 else ()
-  message (STATUS "Crab: Boxes domain will not be available")  
+  message (STATUS "Crab: Boxes domain will NOT be available")  
 endif ()
 
 if (CRAB_USE_APRON)
   set_target_properties(apron PROPERTIES EXCLUDE_FROM_ALL ON)
   message (STATUS "Crab: Apron domains will be available")
 else ()
-  message (STATUS "Crab: Apron domains will not be available")
+  message (STATUS "Crab: Apron domains will NOT be available")
 endif ()
 
 if (CRAB_USE_PPLITE)
   set_target_properties(pplite PROPERTIES EXCLUDE_FROM_ALL ON)
   message (STATUS "Crab: PPLite domains will be available")
 else ()
-  message (STATUS "Crab: PPLite domains will not be available")
+  message (STATUS "Crab: PPLite domains will NOT be available")
 endif ()
 
 if (CRAB_USE_ELINA)
   set_target_properties(elina PROPERTIES EXCLUDE_FROM_ALL ON)
   message (STATUS "Crab: Elina domains will be available")
 else ()
-  message (STATUS "Crab: Elina domains will not be available")
+  message (STATUS "Crab: Elina domains will NOT be available")
 endif ()
 
 #------ Crab Options for logging and stats ----------#
