--- a/.github/workflows/test-crab-docker.yml
+++ b/.github/workflows/test-crab-docker.yml
@@ -31,9 +31,11 @@ jobs:
       #- name: Generate coverage report and upload to codecov
       #	run: docker run -v $(pwd):/host -it seahorn/crab:bionic /bin/sh -c "bash /crab/tests/run_coverage.sh /crab/build /crab && mv /crab/build/all.info /host" && bash <(curl -s https://codecov.io/bash) -Z -f all.info -t ${{ secrets.CODECOV_TOKEN }}
       - name: Build crab+apron+ldd-boxes and run tests 
-        run: docker build --build-arg BRANCH=master --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_apron:bionic -f docker/crab.apron.Dockerfile .
-      - name: Build crab+elina+ldd-boxes and run tests 
-        run: docker build --build-arg BRANCH=master --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_elina:bionic -f docker/crab.elina.Dockerfile .      	      
+        run: docker build --build-arg BRANCH=master --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_apron_boxes:bionic -f docker/crab.apron.Dockerfile .
+      - name: Build crab+elina and run tests 
+        run: docker build --build-arg BRANCH=master --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_elina:bionic -f docker/crab.elina.Dockerfile .
+      - name: Build crab+pplite and run tests 
+        run: docker build --build-arg BRANCH=master --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_pplite:bionic -f docker/crab.pplite.Dockerfile .      	      
       - name: Login to DockerHub Registry
         if: ${{ github.event_name == 'schedule' }}  # only push if nightly run
         run: echo ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
@@ -41,5 +43,6 @@ jobs:
         if: ${{ github.event_name == 'schedule' }}  # only push if nightly run
         run: |
           docker push seahorn/crab:bionic	
-          docker push seahorn/crab_apron:bionic
-          docker push seahorn/crab_elina:bionic 
+          docker push seahorn/crab_apron_boxes:bionic
+          docker push seahorn/crab_elina:bionic
+          docker push seahorn/crab_pplite:bionic 
