feat: native interface for PPLite
Enable using option -DCRAB_USE_PPLITE_NATIVE=ON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,12 +27,16 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}  "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 #--------------- Crab Options ---------------------#
 option(CRAB_USE_LDD   "Enable Ldd library" OFF)
 option(CRAB_USE_APRON "Enable Apron library" OFF)
-option(CRAB_USE_PPLITE "Enable PPLite library" OFF)
+option(CRAB_USE_PPLITE "Enable PPLite domains using Apron interface" OFF)
+option(CRAB_USE_PPLITE_NATIVE "Enable PPLite domains using native interface" OFF)
 option(CRAB_USE_ELINA "Enable Elina library" OFF)
 option(CRAB_BUILD_LIBS_SHARED "Build all Crab libraries dynamically." OFF)
 option(CRAB_ENABLE_STATS "Enable stats" ON)
 if (CRAB_USE_APRON AND CRAB_USE_ELINA)
   message(FATAL_ERROR "Crab: Apron and Elina are not compatible. Choose one")
+endif()
+if (CRAB_USE_PPLITE_NATIVE)
+  set(CRAB_USE_PPLITE ON)
 endif()
 
 ## Only for developers use
@@ -143,7 +147,7 @@ else()
 endif()
 
 #---------- MPFR ---------#
-if (CRAB_USE_APRON OR CRAB_USE_ELINA)
+if (CRAB_USE_APRON OR CRAB_USE_ELINA OR CRAB_USE_PPLITE)
   get_filename_component (GMP_SEARCH_PATH ${GMP_INCLUDE_DIR} PATH)
   find_package(MPFR REQUIRED)
   if (MPFR_FOUND)
@@ -157,6 +161,7 @@ if (CRAB_USE_PPLITE)
   find_package(FLINT REQUIRED)
   if (FLINT_FOUND)
     get_filename_component (FLINT_SEARCH_PATH ${FLINT_INCLUDES} PATH)
+    include_directories (${FLINT_INCLUDES})
   endif ()
 endif ()
 
@@ -178,6 +183,7 @@ include(download_apron)
 include(download_elina)
 include(download_boxes_ldd)
 include(download_pplite)
+include(download_pplite_domains)
 
 if (CRAB_USE_LDD)
   find_package(Ldd)
@@ -203,6 +209,14 @@ if (CRAB_USE_PPLITE)
     include_directories (${PPLITE_INCLUDE_DIR})
     set (PPLITE_LIBS ${PPLITE_LIBRARY})
     set (HAVE_PPLITE TRUE)
+    if (CRAB_USE_PPLITE_NATIVE) 
+      if (EXISTS ${CMAKE_SOURCE_DIR}/include/crab/domains/pplite/pplite_native_wrapper.hpp)
+	set (HAVE_PPLITE_DOMAINS TRUE)
+      else()
+	message (WARNING "Crab: no pplite-domains found. Run \n\tcmake --build . --target pplite-domains-git && cmake ${CMAKE_SOURCE_DIR}")
+	return()
+      endif()
+    endif()
   else()
     ExternalProject_Get_Property (pplite INSTALL_DIR)
     set (PPLITE_ROOT ${INSTALL_DIR} CACHE FILEPATH "Forced location of pplite" FORCE)
@@ -265,7 +279,11 @@ endif ()
 
 if (CRAB_USE_PPLITE)
   set_target_properties(pplite PROPERTIES EXCLUDE_FROM_ALL ON)
-  message (STATUS "Crab: PPLite domains will be available")
+  if (HAVE_PPLITE_DOMAINS)
+    message (STATUS "Crab: PPLite domains using native interface will be available")
+  else()
+    message (STATUS "Crab: PPLite domains using Apron interface will be available")
+  endif()
 else ()
   message (STATUS "Crab: PPLite domains will NOT be available")
 endif ()
@@ -344,6 +362,7 @@ set(CMAKE_FIND_LIBRARY_SUFFIXES ${_CRAB_ORIG_CMAKE_FIND_LIBRARY_SUFFIXES})
 
 install(DIRECTORY include/
         DESTINATION crab/include
+        PATTERN ".git" EXCLUDE
         PATTERN "config.h.cmake" EXCLUDE)
 install(FILES ${CMAKE_BINARY_DIR}/include/crab/config.h DESTINATION crab/include/crab)
 
@@ -359,7 +378,7 @@ endif()
 
 if (CRAB_USE_PPLITE)
   ExternalProject_Get_Property (pplite INSTALL_DIR)  
-  install(DIRECTORY ${INSTALL_DIR} DESTINATION .)          
+  install(DIRECTORY ${INSTALL_DIR} DESTINATION .)
 endif()
 
 if (CRAB_USE_ELINA)
@@ -385,9 +404,9 @@ endif ()
 
 # Print cmake command 
 if (CRAB_ENABLE_TESTS)
-  message(STATUS "Crab: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCRAB_USE_APRON=${CRAB_USE_APRON} -DCRAB_USE_PPLITE=${CRAB_USE_PPLITE} -DCRAB_USE_ELINA=${CRAB_USE_ELINA} -DCRAB_USE_LDD=${CRAB_USE_LDD} -DCRAB_BUILD_LIBS_SHARED=${CRAB_BUILD_LIBS_SHARED} -DCRAB_ENABLE_TESTS=${CRAB_ENABLE_TESTS} -DTEST_DIR=${TEST_DIR}")
+  message(STATUS "Crab: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCRAB_USE_APRON=${CRAB_USE_APRON} -DCRAB_USE_PPLITE=${CRAB_USE_PPLITE} -DCRAB_USE_PPLITE_NATIVE=${CRAB_USE_PPLITE_NATIVE} -DCRAB_USE_ELINA=${CRAB_USE_ELINA} -DCRAB_USE_LDD=${CRAB_USE_LDD} -DCRAB_BUILD_LIBS_SHARED=${CRAB_BUILD_LIBS_SHARED} -DCRAB_ENABLE_TESTS=${CRAB_ENABLE_TESTS} -DTEST_DIR=${TEST_DIR}")
 else()
-  message(STATUS "Crab: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCRAB_USE_APRON=${CRAB_USE_APRON} -DCRAB_USE_PPLITE=${CRAB_USE_PPLITE} -DCRAB_USE_ELINA=${CRAB_USE_ELINA} -DCRAB_USE_LDD=${CRAB_USE_LDD} -DCRAB_BUILD_LIBS_SHARED=${CRAB_BUILD_LIBS_SHARED}")
+  message(STATUS "Crab: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCRAB_USE_APRON=${CRAB_USE_APRON} -DCRAB_USE_PPLITE=${CRAB_USE_PPLITE} -DCRAB_USE_PPLITE_NATIVE=${CRAB_USE_PPLITE_NATIVE} -DCRAB_USE_ELINA=${CRAB_USE_ELINA} -DCRAB_USE_LDD=${CRAB_USE_LDD} -DCRAB_BUILD_LIBS_SHARED=${CRAB_BUILD_LIBS_SHARED}")
 endif() 
 
 
